--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "router5": "^8.0.1",
     "router5-plugin-browser": "^8.0.1",
     "router5-plugin-logger": "^8.0.1",
+    "rxjs": "^6.5.5",
     "shards-react": "^1.0.3",
     "socket.io": "^2.3.0"
   },
